--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+
+#header {
+  display: flex;
+  background-repeat: repeat;
+  width: 100%;
+  height: 100%;
+  font-family: 'Roboto';
+}
+
 .App {
   text-align: center;
 }
